fixed horizontal scroll

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -33387,6 +33387,10 @@ html, body {
   font-size: 16px;
 }
 
+.font-inter {
+  font-family: 'Inter', sans-serif !important;
+}
+
 font-headings {
   font-family: 'Poppins', sans-serif;
 }
